--- a/index.html
+++ b/index.html
@@ -17,27 +17,41 @@
 <body class="flex items-center justify-center h-screen">
     <div class="text-center">
         <!-- Display the message -->
-        <p class="text-white mb-6">Your Message Here</p>
+        <p class="text-white mb-6">Loading...</p>
         <!-- Button with text and link -->
-        <a href="YOUR_LINK_HERE" class="px-6 py-2 text-white bg-blue-500 rounded hover:bg-blue-700">Button Text</a>
+        <a href="#" class="px-6 py-2 text-white bg-blue-500 rounded hover:bg-blue-700">Loading...</a>
     </div>
 
-    <script>
-        // This script sets the message, button text, and button link dynamically
-        window.onload = function () {
-            const urlParams = new URLSearchParams(window.location.search);
+<script>
+  window.onload = function () {
+    const identifier = new URLSearchParams(window.location.search).get('id');
 
-            const message = urlParams.get('message') || 'Default Message';
-            const buttonText = urlParams.get('buttonText') || 'Click Me';
-            const buttonLink = urlParams.get('buttonLink') || '#';
+    if (!identifier || !/^[a-zA-Z0-9-_]+$/.test(identifier)) {
+      console.error('Invalid identifier provided.');
+      return;
+    }
 
-            document.title = message;
-            document.querySelector('p').textContent = message;
-            const button = document.querySelector('a');
-            button.textContent = buttonText;
-            button.href = buttonLink;
+    // Fetch the JSON data from your endpoint
+    const endpoint = 'https://splash.nightwatch.io/'  
+    fetch(endpoint + '/ids.json')
+      .then(response => response.json())
+      .then(data => {
+        if (data[identifier]) {
+          document.title = data[identifier].message;
+          document.querySelector('p').textContent = data[identifier].message;
+          const button = document.querySelector('a');
+          button.textContent = data[identifier].buttonText;
+          button.href = data[identifier].buttonLink;
+        } else {
+          console.error('Identifier not found in the data.');
         }
-    </script>
+      })
+      .catch(error => {
+        console.error('Error fetching data:', error);
+      });
+  }
+</script>
+
 </body>
 
 </html>
