--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@ there are two modes:
       }
 
       // Fetch the JSON data from your endpoint
-      // const endpoint = 'https://splash.nightwatch.io';
-      const endpoint = "http://localhost:8001";
+      const endpoint = 'https://splash.nightwatch.io';
+      // const endpoint = "http://localhost:8001";
 
       $.getJSON(endpoint + "/ids.json", function (data) {
         if (data[identifier]) {
